--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
+title: france nuit 
+subtitle: 'quand france soir devient parodique '
 description: ''
 keywords:
 author: John Doe
@@ -101,4 +101,12 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  - type: git
+    repo: 
+      github:
+        url: "https://github.com/france-nuit/france-nuit.github.io.git"
+      
+        token: $HEXO_DEPLOY_TOKEN
+    message: "chore: update build"
+    name: alphaleadership
+    email: alphaleadershipyt@protonmail.com
