--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,22 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install GitHub CLI
+        run: sudo apt install gh
 
       - name: Update submodules
         run: |
           git submodule update --remote --recursive
-          git diff --quiet || {
+          if ! git diff --quiet; then
             git config --global user.name "github-actions"
             git config --global user.email "actions@github.com"
+            git checkout -b update-submodules-$(date +%Y%m%d)
             git add .
             git commit -m "chore: update submodules to latest commits"
-            git push
-          }
+            git push origin update-submodules-$(date +%Y%m%d)
+            gh pr create --title "chore: update submodules" --body "Automated submodule update" --head update-submodules-$(date +%Y%m%d) --base main
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
