--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Update Git Submodules
 on:
   schedule:
     - cron: '0 0 * * *' # Tous les jours à minuit
-  workflow_dispatch: # Permet de lancer manuellement
+  workflow_dispatch:   # Permet de lancer manuellement
 
 jobs:
   update-submodules:
@@ -10,23 +10,30 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: recursive
+          submodules: recursive  # Initialise et met à jour les sous-modules
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install GitHub CLI
         run: sudo apt install gh
 
-      - name: Update submodules
+      - name: Update submodules to latest
         run: |
+          # On s'assure que tous les sous-modules sont bien initialisés
+          git submodule init
           git submodule update --remote --recursive
+          # On vérifie s'il y a des changements
           if ! git diff --quiet; then
             git config --global user.name "github-actions"
             git config --global user.email "actions@github.com"
-            git checkout -b update-submodules-$(date +%Y%m%d)
+            # On crée une nouvelle branche pour la PR
+            branch_name="update-submodules-$(date +%Y%m%d%H%M%S)"
+            git checkout -b "$branch_name"
             git add .
             git commit -m "chore: update submodules to latest commits"
-            git push origin update-submodules-$(date +%Y%m%d)
-            gh pr create --title "chore: update submodules" --body "Automated submodule update" --head update-submodules-$(date +%Y%m%d) --base main
+            git push origin "$branch_name"
+            # On crée la PR
+            gh pr create --title "chore: update submodules" --body "Automated submodule update" --head "$branch_name" --base main
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
