--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -47,7 +47,7 @@ post_sidebar:
   enable: false
 
 # Content
-fancybox: true
+fancybox: false
 
 
 # Sidebar
@@ -64,16 +64,7 @@ widgets:
 # Social Links
 # Key is the name of FontAwsome icon.
 # Value is the target link (E.g. GitHub: https://github.com/iTimeTraveler)
-social:
-  Github: https://github.com/iTimeTraveler
-  Weibo: http://www.yoursite.com
-  Twitter: 
-  Facebook: 
-  Google-plus: 
-  Instagram: 
-  Pinterest: 
-  Flickr: 
-  email:
+
 
 
 # Search
@@ -87,7 +78,7 @@ search:
 gentie_productKey: #your-gentie-product-key
 duoshuo_shortname:
 disqus_shortname: 
-livere_shortname: MTAyMC8yOTQ4MS82MDQ5
+livere_shortname: #MTAyMC8yOTQ4MS82MDQ5
 uyan_uid: 
 wumii:
 gitment:
@@ -95,15 +86,7 @@ gitment:
   repo:                    #The repo to store comments
   client_id:               #Your client ID
   client_secret:           #Your client secret
-valine:
-  appid: #Leancloud应用app_id，必填
-  appkey: #Leancloud应用app_key，必填
-  notify: false
-  verify: false
-  placeholder: ヾﾉ≧∀≦)o快来评论一下吧!
-  avatar: 
-  pageSize: 10
-  visitor: true
+
 
 # Code Highlight theme
 # Available value:
@@ -166,5 +149,5 @@ progressBar:
   themeCSS: https://github.com/HubSpot/pace/raw/master/themes/orange/pace-theme-flash.css    #PATH to PACE theme CSS, support relative / absolute path
 
 # Ad
-ad:
-  google_adsense_ad_client_id: ca-pub-0123456789ABCDEF
+#ad:
+ # google_adsense_ad_client_id:
