--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ deploy:
     github:
       url: "https://github.com/france-nuit/france-nuit.github.io.git"
       token: $GITHUB_TOKEN
-      branch: main
+      branch: master
   message: "chore: update build"
   name: alphaleadership
   email: alphaleadershipyt@protonmail.com
